--- a/ArquitecturaVersion1/public/css/style.css
+++ b/ArquitecturaVersion1/public/css/style.css
@@ -133,6 +133,11 @@ h2 {
     right: 24%; 
     top: 130px;
 }
+#btnTiquete{
+    position: relative;
+    right: 24%; 
+    top: 130px;
+}
 #tblCliente {
     position: absolute;
     top: 140%;
@@ -235,44 +240,3 @@ footer{
     top: 200px;
 }
 
-
-
-
-/*listarClientes html*/
-#barraBuscar {
-    background-image: url('/css/searchicon.png'); /* Add a search icon to input */
-    background-position: 10px 12px; /* Position the search icon */
-    background-repeat: no-repeat; /* Do not repeat the icon image */
-    border-bottom: 1px solid #fff;
-    background: transparent;
-    /*border: none;*/
-    width: 100%; /* Full-width */
-    font-size: 20px; /* Increase font-size */
-    color: #fbb803;
-    padding: 10px 20px 10px 20px; /* Add some padding */
-    /*border: 1px solid #ddd;*/ /* Add a grey border */
-    margin-bottom: 15px; /* Add some space below the input */
-}
-
-#myTable {
-    border-collapse: collapse; /* Collapse borders */
-    width: 100%; /* Full-width */
-    /*border: 1px */ /*solid #ddd;  Add a grey border */
-    background-color: transparent;
-    font-size: 18px; /* Increase font-size */
-}
-
-#myTable th, #myTable td {
-    text-align: center; /* Left-align text */
-    padding: 10spx; /* Add padding */
-}
-
-#myTable tr {
-    /* Add a bottom border to all table rows */
-    border-bottom: 1px solid #ddd; 
-}
-
-#myTable tr.header, #myTable tr:hover {
-    /* Add a grey background color to the table header and on hover */
-    background-color: #747d8c;
-}
